--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,25 @@
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-	<nav class="navbar navbar-inverse " role="navigation">
+	<nav class="navbar navbar-fixed-top navbar-inverse " role="navigation">
 		
 			<div class="container">
-				<div id="logo" class="navbar-brand"><%= link_to "MyXQZ", root_path %></div>
-				<div class="collapse navbar-collapse navbar-ex1-collapse">
+			 	<!-- Brand and toggle get grouped for better mobile display -->
+				    <div class="navbar-header">
+				      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse">
+				        <span class="sr-only">Toggle navigation</span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				      </button>
+				    <div id="logo" class="navbar-brand"><%= link_to "MyXQZ", root_path %></div>
+				 </div>
+				
+				<div class="collapse navbar-collapse navbar-ex1-collapse" id="bs-navbar-collapse">
 					<% if user_signed_in? -%>
 					<ul class="nav navbar-nav navbar-right">
 						<li><%= link_to 'Submit XQZ', new_link_path %></li>
